[package]
name = "paradox"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
license = "MPL-2.0"
description = "Library for dev/testing for LU related software"

[dependencies]
assembly = { version = "0.6", path = "../assembly/modules/full" }
wayback = { path = "../wayback" }
surf = "1"
clap = "2"
structopt = "0.3"
spinners = "1.2"
#reqwest = "0.9"
futures = { package = "futures-preview", version = "0.3.0-alpha" }
tokio = { version = "0.2", features = ["fs"] }
http = "0.2"
miniserde = "0.1"
anyhow = "1.0"
indicatif = "0.14"
console = "0.9"
quick-xml = "0.17"
full_moon = { git="https://github.com/Kampfkarren/full-moon.git", default-features = false }
full-moon-compat-luaparse = { path = "../full-moon-compat-luaparse" }
encoding_rs_io = "0.1.7"
encoding_rs = "0.8"
