[package]
name = "paradox"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
license = "MPL-2.0"
description = "Library for dev/testing for LU related software"

[dependencies]
anyhow = "1.0"
async-std = "1.6.0"
clap = "2"
console = "0.9"
crossbeam-channel = "0.4"
derive-new = "0.5"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8"
full_moon = { version = "0.6.1", default-features = false }
full-moon-compat-luaparse = { version = "0.1", path = "../full-moon-compat-luaparse" }
futures = "0.3"
http = "0.2"
indicatif = "0.14"
log = "0.4"
miniserde = "0.1"
memmap = "0.7"
serde = "1"
serde_json = "1"
spinners = "1.2"
structopt = "0.3"
surf = "2.0.0-alpha"
wayback-urls = { version = "0.1", path = "../wayback" }

[dependencies.assembly]
version = "0.7.0-beta.1"
path = "../assembly/modules/full"
features = ["serde-derives"]
